k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: universal-exchange
  labels:
    name: universal-exchange
    app: universal-backend
